# FontRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/libschrift/: schrift.c
src/: Font.cpp  Font.h  FontSFT.cpp  FontSFT.h  FontSTB.cpp  FontSTB.h  SkylineBinPack.cpp  SkylineBinPack.h  exampleRender.cpp
src/MindShake/: Font.cpp  Font.h  FontSFT.cpp  FontSFT.h  FontSTB.cpp  FontSTB.h  SkylineBinPack.cpp  SkylineBinPack.h  UTF8_Utils.h
tests/: exampleRender.cpp
